--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
      <h4>made by aarav</h4>
      <h3>press<kbd>w,g,l,t,r,y,d,u,c</kbd>for blocks ,press <kbd>⬆,⬇,⬅,➡ </kbd></h3>
 	</center>
-	<script src="main.js"></script>
+	<script src="main.js"></script><!---->
 </body>
 </html>
